@@ -7,7 +7,7 @@
 \large
 
 \title{Apvlv - Alf's PDF Viewer Like Vim}
-\author{version 0.0.3}
+\author{version 0.0.4}
 \date{by Alf $<$naihe2010@gmail.com$>$ \\Apvlv is open source and freely distributable}
 \maketitle{}
 
@@ -307,6 +307,14 @@ display the help pdf document about the prompt command.
 
 close the current window.\\
 If the window is the top level window, quit the program.
+
+\item o[pen] 'filename'
+
+open a file which named 'filename'.
+
+\item doc 'filename'
+
+load the 'filename' to current window.
 
 \item :TOtext
 
