@@ -1,2 +1,3 @@
-regex search
-prompt auto complete
+1. directory view
+
+2. regex search
