@@ -2,7 +2,7 @@ dnl
 dnl APVLV - Alf's PDF Viewer Like Vim
 dnl
  
-AC_INIT(apvlv, 0.0.3, naihe2010@gmail.com)
+AC_INIT(apvlv, 0.0.4, naihe2010@gmail.com)
 AC_COPYRIGHT([Copyright (C) 2008 Alf's Software.])
 
 if test -e .svn; then
